--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -5,6 +5,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="" charset="UTF-8"></script>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissor">Scissor</button>
+    <div id="player">Player Score</div>
+    <div id="computer">Computer Score</div>
+
+    <script src="game.js" charset="UTF-8"></script>
 </body>
 </html>
