--- a/rock-paper-scissors/index.html
+++ b/rock-paper-scissors/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
     <button id="rock">Rock</button>
